@@ -1,5 +1,11 @@
 2015-10-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Pasquale Cocchini:
+	bug #46021: Please add read in the memory lock section of ATtiny85
+	* avrdude.conf.in (ATtiny25/45/85): add read pattern for lock bits
+
+2015-10-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* Makefile.am (libavrdude_a_SOURCES): reflect recent changes
 	(pgm.h is gone, config.h is new).
 
